--- a/Arrays/index.html
+++ b/Arrays/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <title>Bankist</title>
+    <script src="script.js"></script>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
