--- a/Asynchronous/index.html
+++ b/Asynchronous/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
     <title>Asynchronous JavaScript</title>
   </head>
   <body>
@@ -24,8 +23,9 @@
         </article>
         -->
       </div>
-      <!-- <button class="btn-country">Where am I?</button> -->
+      <button class="btn-country">Where am I?</button>
       <div class="images"></div>
     </main>
+  <script src="script.js"></script>
   </body>
 </html>
