slideUp() slideDown() slideToggle()

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -40,6 +40,7 @@
     <div class="third-section">
       <input type="text" />
     </div>
+
     <div class="d-grid col-12 fourth-section">
       <div class="btn-group p-4">
         <button class="btn btn-primary btn-fadein">Fade in</button>
@@ -47,6 +48,17 @@
         <button class="btn btn-primary btn-fadetoggle">Fade toggle</button>
       </div>
       <div class="font-monospace text-xl-center m-4 mt-0 p-4 bg-warning rounded-1 text-section">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quae neque quasi sint adipisci. Molestias corrupti consectetur iure maxime accusantium repudiandae eius obcaecati. Maxime velit voluptates incidunt accusamus commodi in!
+      </div>
+    </div>
+
+    <div class="d-grid col-12 fourth-section">
+      <div class="btn-group">
+        <button class="btn btn-primary btn-slideup">Slide Up</button>
+        <button class="btn btn-primary btn-slidedown">Slide Down</button>
+        <button class="btn btn-primary btn-slidetoggle">Slide Toggle</button>
+      </div>
+      <div class="font-monospace text-xl-center bg-warning rounded-1 slide-text-section">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quae neque quasi sint adipisci. Molestias corrupti consectetur iure maxime accusantium repudiandae eius obcaecati. Maxime velit voluptates incidunt accusamus commodi in!
       </div>
     </div>
