html() & an element argument

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -47,8 +47,13 @@
         <button class="btn btn-primary btn-fadeout">Fade out</button>
         <button class="btn btn-primary btn-fadetoggle">Fade toggle</button>
       </div>
-      <div class="font-monospace text-xl-center m-4 mt-0 p-4 bg-warning rounded-1 text-section">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quae neque quasi sint adipisci. Molestias corrupti consectetur iure maxime accusantium repudiandae eius obcaecati. Maxime velit voluptates incidunt accusamus commodi in!
+      <div
+        class="font-monospace text-xl-center m-4 mt-0 p-4 bg-warning rounded-1 text-section"
+      >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+        quae neque quasi sint adipisci. Molestias corrupti consectetur iure
+        maxime accusantium repudiandae eius obcaecati. Maxime velit voluptates
+        incidunt accusamus commodi in!
       </div>
     </div>
 
@@ -58,16 +63,25 @@
         <button class="btn btn-primary btn-slidedown">Slide Down</button>
         <button class="btn btn-primary btn-slidetoggle">Slide Toggle</button>
       </div>
-      <div class="font-monospace text-xl-center bg-warning rounded-1 slide-text-section">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quae neque quasi sint adipisci. Molestias corrupti consectetur iure maxime accusantium repudiandae eius obcaecati. Maxime velit voluptates incidunt accusamus commodi in!
+      <div
+        class="font-monospace text-xl-center bg-warning rounded-1 slide-text-section"
+      >
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+        quae neque quasi sint adipisci. Molestias corrupti consectetur iure
+        maxime accusantium repudiandae eius obcaecati. Maxime velit voluptates
+        incidunt accusamus commodi in!
       </div>
     </div>
 
     <div class="animate-section">
       <span>Test</span>
+      <button class="animate-btn">Push for animation</button>
     </div>
-    <button class="animate-btn">Push for animation</button>
 
+    <div class="fourth-section">
+      <p class="text-black html-transform">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, porro.</p>
+      <button class="btn btn-outline-primary btn-transform">Push for transform</button>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
